add new game button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div id="inputWrap">
-    <p>Enter your pair</p>
+    <p>Matching Game</p>
     <div class="inputWrap">    
       <input class="input" id="item1" type="text" placeholder="Item 1">
       <input class="input" id="item2" type="text" placeholder="Item 2">
@@ -25,14 +25,13 @@
 
   <div class="generatedPair">
     <ul class='list1'>
-     
     </ul>
     <ul class='list2'>
-      
     </ul>
   </div>
 
   <button id="start">Start</button>
+  <button id="newGame">New Game</button>
 
   <script src="script.js"></script>
 </body>
