remove blue box on add button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="inputWrap">    
       <input class="input" id="item1" type="text" placeholder="Item 1">
       <input class="input" id="item2" type="text" placeholder="Item 2">
-      <button id="submit">Submit</button>
+      <button id="submit">Add</button>
     </div>
   </div>
 
