fix overflow when input is too long

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div id="inputWrap">
-    <p>Matching Game</p>
+    <p>Match Me</p>
     <div class="inputWrap">    
       <input class="input" id="item1" type="text" placeholder="Item 1">
       <input class="input" id="item2" type="text" placeholder="Item 2">
@@ -24,14 +24,15 @@
   </div>
 
   <div class="generatedPair">
-    <ul class='list1'>
-    </ul>
-    <ul class='list2'>
-    </ul>
+    <div class="listWrap">
+      <ul class='list1'></ul>
+      <ul class='list2'></ul>
+    </div>
+    <button id="newGame">New Turn</button>
   </div>
 
   <button id="start">Start</button>
-  <button id="newGame">New Game</button>
+
 
   <script src="script.js"></script>
 </body>
